<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".LauncherActivity">


    <ImageView
        android:id="@+id/image_logo_app"
        android:layout_width="match_parent"
        android:layout_height="384dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="@dimen/image_logo_top"
        android:background="@drawable/logo_app"
        android:contentDescription="@string/image_logo" />

    <TextView
        android:id="@+id/name_app_logo1"
        style="@style/nameAppLogoStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="@dimen/name_app_logo_top"
        android:contentDescription="@string/name_app_logo_1"
        android:text="@string/name_app_logo_1" />

    <TextView
        android:id="@+id/name_app_logo2"
        style="@style/nameAppLogoStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="@dimen/name_app_logo_top"
        android:layout_toEndOf="@+id/name_app_logo1"
        android:contentDescription="@string/name_app_logo_2"
        android:text="@string/name_app_logo_2"
        android:textColor="#049204" />


</RelativeLayout>