<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <View
            android:id="@+id/divider7"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="?android:attr/listDivider" />

        <TextView
            android:id="@+id/textView3"
            style="@style/StyleDatosArduino"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="Operaciones disponibles" />

        <View
            android:id="@+id/divider8"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="?android:attr/listDivider" />

        <TextView
            android:id="@+id/txt_iniciar_riego"
            style="@style/StyleButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:paddingStart="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="3dp"
            android:text="@string/iniciar_riego"
            android:textColor="@color/colorBoton" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingStart="10dp">

            <TextView
                android:id="@+id/txt_iniciar_censo"
                style="@style/StyleButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/iniciar_censo"
                android:textColor="@color/colorBoton" />

            <ProgressBar
                android:id="@+id/progress_bar_censo"
                style="@android:style/Widget.DeviceDefault.Light.ProgressBar"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:indeterminate="true"
                android:visibility="invisible" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingStart="10dp">

            <TextView
                android:id="@+id/txt_iniciar_mantenimiento"
                style="@style/StyleButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true"
                android:paddingBottom="3dp"
                android:text="@string/iniciar_mantenimiento"
                android:textColor="@color/colorBoton" />

            <ProgressBar
                android:id="@+id/progress_bar_mant"
                style="@android:style/Widget.DeviceDefault.Light.ProgressBar"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:indeterminate="true"
                android:visibility="invisible" />

        </LinearLayout>

        <TextView
            android:id="@+id/txt_detener_riego"
            style="@style/StyleButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:paddingStart="10dp"
            android:paddingBottom="3dp"
            android:text="@string/detener_riego"
            android:textColor="@color/colorBoton" />

        <View
            android:id="@+id/divider6"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="?android:attr/listDivider" />

        <TextView
            android:id="@+id/textView"
            style="@style/StyleDatosArduino"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="Configuración de parámetros de riego" />

        <View
            android:id="@+id/divider5"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="?android:attr/listDivider" />

        <TextView
            android:id="@+id/textView2"
            style="@style/StyleDatosArduino"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:paddingBottom="3dp"
            android:text="@string/tipo_riego" />

        <RadioGroup
            android:id="@+id/radiobtn_tipo_riegos"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="10dp">

            <RadioButton
                android:id="@+id/radiobtn_continuo"
                style="@style/StyleDatosArduino"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="true"
                android:text="@string/riego_continuo" />

            <RadioButton
                android:id="@+id/radiobtn_intermitente"
                style="@style/StyleDatosArduino"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/riego_intermitente" />

        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingStart="10dp">

            <TextView
                android:id="@+id/txt_duracion_riego"
                style="@style/StyleDatosArduino"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/ingrese_duracion" />

            <EditText
                android:id="@+id/editText2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:inputType="textPersonName" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>